--- a/app/src/main/res/layout/activity_add_new_note.xml
+++ b/app/src/main/res/layout/activity_add_new_note.xml
@@ -6,37 +6,34 @@
     android:layout_height="match_parent"
     tools:context=".AddNewNote">
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <LinearLayout
-            android:id="@+id/line_layout"
+        <EditText
+            android:id="@+id/editText_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:ems="10"
+            android:hint="Title"
+            android:inputType="text" />
 
-            <EditText
-                android:id="@+id/editText_Title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="Title"
-                android:inputType="text"
-                android:text="Name" />
+        <EditText
+            android:id="@+id/editText_content"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="top"
+            android:ems="10"
+            android:hint="Content"
+            android:inputType="textMultiLine" />
 
-            <EditText
-                android:id="@+id/editText_Content"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:inputType="textMultiLine" />
+        <Button
+            android:id="@+id/button_add"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Add" />
 
-            <Button
-                android:id="@+id/button2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Button" />
-        </LinearLayout>
-    </ScrollView>
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
