Ability to remove item from list
Remove items from list with context menu. Final commit before release

--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -16,7 +17,8 @@
         android:paddingEnd="5dp"
         android:paddingStart="5dp"
         android:textSize="12sp"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
+
     <TextView
         android:id="@+id/textView_date"
         android:layout_width="match_parent"
@@ -32,4 +34,5 @@
         android:paddingStart="5dp"
         android:paddingEnd="5dp"
         android:textSize="14sp"/>
+
 </LinearLayout>
